Spigot built in image; readme reworked; docker-compose added